--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="module" src="js/main.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>4학년 방학</title>
+    <title>2007</title>
 </head>
 
 <body>
